--- a/notes/01.md
+++ b/notes/01.md
@@ -300,31 +300,246 @@ Definition: Retrieval Augmented Generation - a term that refers to the process o
 
 
 
+### 图像生成
+
+- 以下使用 OpenAI DALL-E 3 生成图像，并结合其他 LLM 功能（如文本和嵌入生成）。
+
+- 首先使用 Chat Completion 生成随机图像描述然后 DALL-E 3 从该描述创建图像，并内联显示图像。
+- 最后要求用户描述图像。使用 Cosine Similarity 将用户描述的嵌入与原始描述进行比较，并返回从 0 到 1 的分数，其中 1 表示完全匹配。
+- 安装
+  - System.Numerics.Tensors
+  - SkiaSharp
+
+- 准备服务
+
+```cs
+builder.AddOpenAITextEmbeddingGeneration("text-embedding-ada-002", apiKey, orgId); // 用于将猜测与真实图像描述进行比较
+builder.AddOpenAIChatCompletion(model, apiKey, orgId);
+builder.AddOpenAITextToImage(apiKey, orgId); // 默认就是OpenAI Dall-E 3
+```
+
+**生成图片**
+
+```cs
+var prompt = @"
+思考一个与数字{{$input}}有关的人工制品。
+用一句详细的话来描述这个图像。描述中不能包含数字。";
+
+var executionSettings = new OpenAIPromptExecutionSettings 
+{
+    MaxTokens = 256,
+    Temperature = 1
+};
+
+// 创建一个语义函数，用于生成随机图像描述。
+var genImgDescription = kernel.CreateFunctionFromPrompt(prompt, executionSettings);
+
+var random = new Random().Next(0, 200);
+var imageDescriptionResult = await kernel.InvokeAsync(genImgDescription, new() { ["input"] = random });
+var imageDescription = imageDescriptionResult.ToString();
+
+// 使用DALL-E 3来生成一张图片。在这个例子中OpenAI返回的是一个URL（虽然可以要求它返回base64编码的图片）
+var imageUrl = await dallE.GenerateImageAsync(imageDescription.Trim(), 1024, 1024);
+
+await SkiaUtils.ShowImage(imageUrl, 1024, 1024);
+```
+
+- 尝试猜测图像是关于什么的。
+
+```cs
+// 提示用户猜测图像的内容
+var guess = await InteractiveKernel.GetInputAsync("请用你自己的话描述这张图片");
+
+// 比较用户的猜测与实际描述并计算得分
+var origEmbedding = await textEmbedding.GenerateEmbeddingsAsync(new List<string> { imageDescription });
+var guessEmbedding = await textEmbedding.GenerateEmbeddingsAsync(new List<string> { guess });
+var similarity = TensorPrimitives.CosineSimilarity(origEmbedding.First().Span, guessEmbedding.First().Span);
+
+Console.WriteLine($"你的描述:\n{Utils.WordWrap(guess, 90)}\n");
+Console.WriteLine($"实际描述:\n{Utils.WordWrap(imageDescription.Trim(), 90)}\n");
+Console.WriteLine($"得分: {similarity:0.00}\n\n");
+
+// 取消注释以下行以查看OpenAI提供的URL
+// Console.WriteLine(imageUrl);
+```
 
 
 
+### 带有 BingSearch 的 RAG
+
+- 如何将必应搜索与语义内核集成，以便从 Internet 获取最新信息。
+
+- 使用 Bing 搜索需要 API 密钥，通过在 Azure 中创建[必应搜索资源](https://learn.microsoft.com/en-us/bing/search-apis/bing-web-search/create-bing-search-service-resource)来获取 API 密钥。
+
+**安装**
+
+- Microsoft.SemanticKernel.Plugins.Web
+- Microsoft.SemanticKernel.Plugins.Core
+- Microsoft.SemanticKernel.PromptTemplates.Handlebars
+
+**BingSearch密钥**
+
+- 使用 [`.NET Interactive`](https://github.com/dotnet/interactive/blob/main/docs/kernels-overview.md) 中引入的 `InteractiveKernel` 方法在 BING_KEY 中输入 Bing 搜索密钥
+
+```cs
+using InteractiveKernel = Microsoft.DotNet.Interactive.Kernel;
+
+string BING_KEY = (await InteractiveKernel.GetPasswordAsync("Please enter your Bing Search Key")).GetClearTextPassword();
+```
 
 
 
+**基本搜索插件**
+
+- 以下演示如何从 `BingTextSearch` 的实例创建名为 SearchPlugin 的插件。
+- 使用 `CreateWithSearch` 会创建一个新插件，其中包含一个调用底层文本搜索实现的 Search 函数。SearchPlugin 被添加到 Kernel 中，使它可以在提示渲染期间被调用。
+- 提示模板包括一个调用，该 `{{SearchPlugin.Search $query}}` 调用将调用 SearchPlugin 来检索与当前查询相关的结果。然后结果将插入到呈现的提示中，然后再将其发送到 AI 模型。
+
+```cs
+// 创建一个使用OpenAI聊天补全的内核
+var builder = Kernel.CreateBuilder();
+
+// 配置内核使用的AI后端
+var (useAzureOpenAI, model, azureEndpoint, apiKey, orgId) = Settings.LoadFromFile();
+if (useAzureOpenAI)
+    builder.AddAzureOpenAIChatCompletion(model, azureEndpoint, apiKey);
+else
+    builder.AddOpenAIChatCompletion(model, apiKey, orgId);
+var kernel = builder.Build();
+
+// 使用Bing搜索创建一个文本搜索工具
+#pragma warning disable SKEXP0050
+var textSearch = new BingTextSearch(apiKey: BING_KEY);
+
+// 构建一个带有必应搜索功能的文本搜索插件，并添加到内核中
+var searchPlugin = textSearch.CreateWithSearch("SearchPlugin");
+kernel.Plugins.Add(searchPlugin);
+
+// 调用提示并使用文本搜索插件来提供基础信息
+var query = "What is the Semantic Kernel?";
+var prompt = "{{SearchPlugin.Search $query}}. {{$query}}";
+KernelArguments arguments = new() { { "query", query } };
+Console.WriteLine(await kernel.InvokePromptAsync(prompt, arguments));
+```
 
 
 
+**带引文的搜索插件**
+
+- 下面的示例重复了上面描述的模式，但有些显著的变化。
+
+  - `CreateWithGetTextSearchResults` 用于创建 `SearchPlugin`，该插件从底层文本搜索实现中调用 `GetTextSearchResults` 方法。
+
+  - 提示模板使用 Handlebars 语法。这允许模板迭代搜索结果并呈现每个结果的名称、值和链接。
+
+  - 该提示包含引用的说明，因此 AI 模型将执行向响应添加引用的工作。
+
+```cs
+// 创建带有 OpenAI 聊天完成的内核
+var builder = Kernel.CreateBuilder();
+
+// 配置内核使用的 AI 后端
+var (useAzureOpenAI, model, azureEndpoint, apiKey, orgId) = Settings.LoadFromFile();
+if (useAzureOpenAI)
+    builder.AddAzureOpenAIChatCompletion(model, azureEndpoint, apiKey);
+else
+    builder.AddOpenAIChatCompletion(model, apiKey, orgId);
+var kernel = builder.Build();
+
+// 使用必应搜索创建文本搜索
+#pragma warning disable SKEXP0050
+var textSearch = new BingTextSearch(apiKey: BING_KEY);
+
+// 构建一个带有必应搜索的文本搜索插件并添加到内核中
+var searchPlugin = textSearch.CreateWithGetTextSearchResults("SearchPlugin");
+kernel.Plugins.Add(searchPlugin);
+
+// 调用提示，并使用文本搜索插件提供基础信息
+var query = "什么是语义内核？";
+string promptTemplate = """
+{{#with (SearchPlugin-GetTextSearchResults query)}}  
+    {{#each this}}  
+    名称: {{Name}}
+    内容: {{Value}}
+    链接: {{Link}}
+    -----------------
+    {{/each}}  
+{{/with}}  
+
+{{query}}
+
+在响应中引用相关资料的地方包含引文。
+""";
+KernelArguments arguments = new() { { "query", query } };
+HandlebarsPromptTemplateFactory promptTemplateFactory = new();
+Console.WriteLine(await kernel.InvokePromptAsync(
+    promptTemplate,
+    arguments,
+    templateFormat: HandlebarsPromptTemplateFactory.HandlebarsTemplateFormat,
+    promptTemplateFactory: promptTemplateFactory
+));
+```
 
 
 
+**带有过滤器的搜索插件**
 
+- 目前的示例使用排名靠前的 Web 搜索结果来提供接地数据。为了提高可靠性，可以将 Web 搜索限制仅返回指定站点的结果。
+- 基于上一个示例添加搜索结果的筛选。带有相等子句的 `TextSearchFilter` 用于指定搜索结果中仅包含来自 Microsoft 开发人员博客站点 （ `site == 'devblogs.microsoft.com'` ）的结果。
+- 该示例用于创建 `KernelPluginFactory.CreateFromFunctions` `SearchPlugin`。为插件提供了自定义描述。 `ITextSearch.CreateGetTextSearchResults` 扩展方法用于创建调用文本搜索服务的 `KernelFunction`。
 
+```cs
+// 创建带有 OpenAI 聊天完成的内核
+var builder = Kernel.CreateBuilder();
 
+// 配置内核使用的 AI 后端
+var (useAzureOpenAI, model, azureEndpoint, apiKey, orgId) = Settings.LoadFromFile();
+if (useAzureOpenAI)
+    builder.AddAzureOpenAIChatCompletion(model, azureEndpoint, apiKey);
+else
+    builder.AddOpenAIChatCompletion(model, apiKey, orgId);
+var kernel = builder.Build();
 
+// 使用必应搜索创建文本搜索
+#pragma warning disable SKEXP0050
+var textSearch = new BingTextSearch(apiKey: BING_KEY);
 
+// 创建一个筛选器，仅搜索 Microsoft Developer Blogs 网站
+#pragma warning disable SKEXP0001
+var filter = new TextSearchFilter().Equality("site", "devblogs.microsoft.com");
+var searchOptions = new TextSearchOptions() { Filter = filter };
 
+// 构建一个带有必应搜索的文本搜索插件，并添加到内核中，专门用于搜索 Microsoft Developer Blogs 网站
+var searchPlugin = KernelPluginFactory.CreateFromFunctions(
+    "SearchPlugin", "仅搜索 Microsoft Developer Blogs 网站",
+    [textSearch.CreateGetTextSearchResults(searchOptions: searchOptions)]);
+kernel.Plugins.Add(searchPlugin);
 
+// 调用提示，并使用文本搜索插件提供基础信息
+var query = "什么是语义内核？";
+string promptTemplate = """
+{{#with (SearchPlugin-GetTextSearchResults query)}}  
+    {{#each this}}  
+    名称: {{Name}}
+    内容: {{Value}}
+    链接: {{Link}}
+    -----------------
+    {{/each}}  
+{{/with}}  
 
+{{query}}
 
-
-
-
-
+在响应中引用相关资料的地方包含引文。
+""";
+KernelArguments arguments = new() { { "query", query } };
+HandlebarsPromptTemplateFactory promptTemplateFactory = new();
+Console.WriteLine(await kernel.InvokePromptAsync(
+    promptTemplate,
+    arguments,
+    templateFormat: HandlebarsPromptTemplateFactory.HandlebarsTemplateFormat,
+    promptTemplateFactory: promptTemplateFactory
+));
+```
 
 
 
