--- a/notes/记录.md
+++ b/notes/记录.md
@@ -69,6 +69,9 @@
 - 许泽宇sk视频
 - [Semantic Kernel & Kernel Memory 入门系列 ❤️‍🔥 - 宵伯特 - 博客园 (cnblogs.com)](https://www.cnblogs.com/xbotter/p/semantic_kernel_introduction.html)
 - [Kernel Memory 入门系列： RAG 简介 - 宵伯特 - 博客园 (cnblogs.com)](https://www.cnblogs.com/xbotter/p/kernel_memory_rag.html)
+- [Arron - RAG - 知乎](https://www.zhihu.com/column/c_1728347655808483328)
+  - https://github.com/ArronAI007/Awesome-AGI
+
 - [这可能是目前最全的中文Semantic Kernel入门教程，呕心沥血，万字长文！！-CSDN博客](https://blog.csdn.net/sd7o95o/article/details/135984882)
 
 - [Beginner's Guide to Semantic Kernel with Dapper, PostgreSQL (davek.dev)](https://davek.dev/beginners-guide-to-semantic-kernel-with-dapper-postgresql-and-pgvector-in-c)
