--- a/notes/01.md
+++ b/notes/01.md
@@ -1,3 +1,5 @@
+## notebook
+
 ### 使用笔记本
 
 - vscode安装 polyglot notebook
@@ -540,6 +542,71 @@ Console.WriteLine(await kernel.InvokePromptAsync(
     promptTemplateFactory: promptTemplateFactory
 ));
 ```
+
+
+
+## xzy
+
+### planner分步规划器
+
+- 分步和 Handlebars 规划器仍可在语义内核中使用。 但是，建议对大多数任务使用函数调用，因为它更强大且更易于使用。 后续版本的SK中将弃用分步和 Handlebars 规划器。如果要生成新的 AI 代理，建议 *不要* 使用 Stepwise 或 Handlebars planners。 请改用函数调用，因为它更强大且更易于使用。
+  - [.NET 从 Stepwise Planner 迁移到自动函数调用 | Microsoft Learn](https://learn.microsoft.com/zh-cn/semantic-kernel/support/migration/stepwise-planner-migration-guide?pivots=programming-language-csharp)
+
+```cs
+/// <summary>
+/// 计划测试
+/// </summary>
+/// <param name="msg">
+/// 案例输入：1.小明有7个冰淇淋，我有2个冰淇淋，他比我多几个冰淇淋？
+/// 2.小明有7个冰淇淋，我有2个冰淇淋，我们一共有几个冰淇淋？
+/// </param>
+/// <returns></returns> <summary>
+public async Task PlanTest(string msg)
+{
+    var planner = new HandlebarsPlanner(
+        new HandlebarsPlannerOptions()
+        {
+            // 如果您想使用循环进行测试，而不管模型选择如何，请更改此设置。
+            AllowLoops = true,
+        }
+    );
+    kernel.ImportPluginFromDefaultPathPromptDirectory("Calculate");
+    var plan = await planner.CreatePlanAsync(kernel, msg);
+    Console.WriteLine("Plan:\n");
+    Console.WriteLine(JsonSerializer.Serialize(plan));
+
+    var res = await plan.InvokeAsync(kernel);
+    System.Console.WriteLine(res);
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
