--- a/notes/01.md
+++ b/notes/01.md
@@ -745,6 +745,46 @@ public static class KernelFunctionCombinators
 
 
 
+### kernel memory（旧）
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
