修改记录教程信息

--- a/notes/01.md
+++ b/notes/01.md
@@ -18,9 +18,9 @@
 
 - **语义内核**（Semantic Kernel, SK）- 协调者，它通过SK可用的插件（PLUGINS）来满足用户的请求（ASK）。
 - **请求**（Ask）- 用户向语义内核提出的要求，以协助达成用户的目标。
-  - “我们向SK提出请求（ASKs）”
+  - “向SK提出请求（ASKs）”
 - **插件**（Plugins）- 一系列针对特定领域的、经过精细调整的函数集合，作为整体提供给SK使用。
-  - “我们有一个用于更好地使用Office的插件”
+  - “有一个用于更好地使用Office的插件”
 - **函数**（Function）- 由语义AI和/或原生代码组成的计算单元，存在于某个插件（PLUGIN）中。
   - “Office插件包含许多函数（FUNCTIONS）” 
 - **原生函数**（Native Function）- 使用传统编程语言（如C#、Python、TypeScript）表达，并能与SK轻松集成。
@@ -558,7 +558,7 @@ Console.WriteLine(await kernel.InvokePromptAsync(
 /// </summary>
 /// <param name="msg">
 /// 案例输入：1.小明有7个冰淇淋，我有2个冰淇淋，他比我多几个冰淇淋？
-/// 2.小明有7个冰淇淋，我有2个冰淇淋，我们一共有几个冰淇淋？
+/// 2.小明有7个冰淇淋，我有2个冰淇淋，一共有几个冰淇淋？
 /// </param>
 /// <returns></returns> <summary>
 public async Task PlanTest(string msg)
@@ -746,6 +746,62 @@ public static class KernelFunctionCombinators
 
 
 ### kernel memory（旧）
+
+**Kernel Memory是如何工作的？**
+
+- 嵌入是一种将单词或其他数据表示为高维空间中的向量的方式。 
+- 高维空间意味着空间具有许多维度，相似的单词或数据将具有相似的向量，而不同的单词或数据将具有不同的向量。 这有助于衡量它们的关联程度或无关程度，并且执行一些操作，比如加法、减法、乘法等。嵌入对AI模型很有用，因为它们可以以计算机可以理解和处理的方式捕捉单词或数据的含义和上下文。 
+- 当进行查询时，查询会被转换为其嵌入表示，然后通过所有现有的嵌入向量进行搜索，以找到最相似的内容。 
+  - 这类似于在Bing上进行搜索查询时，它会给你多个与你查询相关的结果。
+- Kernel Memory不太可能给你一个完全匹配的结果，但它总是会给你一组匹配项，以与其他文本多相似程度排名。
+
+
+
+**为什么在LLM AI中Embedding是重要的？**
+
+- 由于提示是输入到AI模型中以生成所需输出或响应的文本，需要考虑输入文本的长度，基于选择使用的模型的令牌限制。 
+  - 例如，GPT-4可以处理每个输入高达8,192个令牌，而GPT-3只能处理多达4,096个令牌。这意味着长于模型令牌限制的文本将无法适应，可能会被截断或忽略。 
+  - 如果能够使用整整一本10,000页的操作手册作为提示的文本，那将会很好，但由于令牌限制的约束，这是不可能的。因此，嵌入对于将这个大文本分解为较小的部分是非常有用的。 
+  - 可以通过将每一页进行总结成一个较短的段落，然后为每个摘要生成一个嵌入向量来实现这一点。 
+- 嵌入向量就像是文本的压缩表示，能保留其含义和上下文。然后可以比较摘要的嵌入向量和提示的嵌入向量，选择最相似的摘要。然后，可以将这些摘要添加到的输入文本中，作为提示的上下文。 通过这种方式，可以利用Embedding来帮助选择和适应作为模型标记限制内的大文本作为上下文。
+
+
+
+**什么是Embeddings?**
+
+- Embeddings是表示模型处理的标记的含义和上下文的数字向量或数组。
+- 用于对输入和输出文本进行编码和解码，大小和维度可以不同。Embeddings可以帮助模型理解标记之间的关系，并生成相关和连贯的文本。
+
+
+
+**什么是vector-db?**
+
+- `vector-db`是一种数据库类型，它将数据存储为高维向量，这些向量是特征或属性的数学表示。
+- 每个向量都具有一定数量的维度，取决于数据的复杂性和细粒度，维度可以在几十到数千之间。这些向量通常是通过对原始数据应用某种转换或嵌入函数生成的，比如文本、图像、音频、视频等。嵌入函数可以基于各种方法，如机器学习模型、词嵌入、特征提取算法。
+-  `vector-db`的主要优势在于它能够快速准确地进行相似度搜索，并根据矢量距离或相似度检索数据。这意味着，你可以使用`vector-db`来查找语义或上下文含义最相似或相关的数据，而不是使用基于精确匹配或预定义条件的传统查询数据库方法。
+
+**支持的连接器**
+
+| 服务                                          |                              C#                              |                            Python                            |
+| :-------------------------------------------- | :----------------------------------------------------------: | :----------------------------------------------------------: |
+| Azure Cosmos DB 中的 MongoDB vCore 向量数据库 |                                                              | [Python](https://github.com/microsoft/semantic-kernel/tree/main/python/semantic_kernel/connectors/memory/azure_cosmosdb) |
+| Azure AI 搜索                                 | [C#](https://github.com/microsoft/semantic-kernel/tree/main/dotnet/src/Connectors/Connectors.Memory.AzureAISearch) | [Python](https://github.com/microsoft/semantic-kernel/tree/main/python/semantic_kernel/connectors/memory/azure_cognitive_search) |
+| Azure PostgreSQL服务器                        | [C#](https://github.com/microsoft/semantic-kernel/tree/main/dotnet/src/Connectors/Connectors.Memory.Postgres) |                                                              |
+| Azure SQL数据库                               | [C#](https://github.com/kbeaugrand/SemanticKernel.Connectors.Memory.SqlServer) |                                                              |
+| Chroma                                        | [C#](https://github.com/microsoft/semantic-kernel/tree/main/dotnet/src/Connectors/Connectors.Memory.Chroma) | [Python](https://github.com/microsoft/semantic-kernel/tree/main/python/semantic_kernel/connectors/memory/chroma) |
+| DuckDB                                        | [C#](https://github.com/microsoft/semantic-kernel/tree/main/dotnet/src/Connectors/Connectors.Memory.DuckDB) |                                                              |
+| Milvus                                        | [C#](https://github.com/microsoft/semantic-kernel/tree/main/dotnet/src/Connectors/Connectors.Memory.Milvus) | [Python](https://github.com/microsoft/semantic-kernel/tree/main/python/semantic_kernel/connectors/memory/milvus) |
+| MongoDB Atlas Vector Search                   | [C#](https://github.com/microsoft/semantic-kernel/tree/main/dotnet/src/Connectors/Connectors.Memory.MongoDB) | [Python](https://github.com/microsoft/semantic-kernel/tree/main/python/semantic_kernel/connectors/memory/mongodb_atlas) |
+| Pinecone                                      | [C#](https://github.com/microsoft/semantic-kernel/tree/main/dotnet/src/Connectors/Connectors.Memory.Pinecone) | [Python](https://github.com/microsoft/semantic-kernel/tree/main/python/semantic_kernel/connectors/memory/pinecone) |
+| Postgres                                      | [C#](https://github.com/microsoft/semantic-kernel/tree/main/dotnet/src/Connectors/Connectors.Memory.Postgres) | [Python](https://github.com/microsoft/semantic-kernel/tree/main/python/semantic_kernel/connectors/memory/postgres) |
+| Qdrant                                        | [C#](https://github.com/microsoft/semantic-kernel/tree/main/dotnet/src/Connectors/Connectors.Memory.Qdrant) |                                                              |
+| Redis                                         | [C#](https://github.com/microsoft/semantic-kernel/tree/main/dotnet/src/Connectors/Connectors.Memory.Redis) |                                                              |
+| Sqlite                                        | [C#](https://github.com/microsoft/semantic-kernel/tree/main/dotnet/src/Connectors/Connectors.Memory.Sqlite) |                                                              |
+| Weaviate                                      | [C#](https://github.com/microsoft/semantic-kernel/tree/main/dotnet/src/Connectors/Connectors.Memory.Weaviate) | [Python](https://github.com/microsoft/semantic-kernel/tree/main/python/semantic_kernel/connectors/memory/weaviate) |
+
+
+
+**案例**
 
 - 基本查询向量
 
@@ -1076,6 +1132,40 @@ private const string RecallFunctionDefinition =
 答案:
 ";
 ```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
