--- a/notes/记录.md
+++ b/notes/记录.md
@@ -13,19 +13,23 @@
 
 
 
-**小项目**
+**chat项目**
+
+- [AIDotNet/ThorChat: 基于Lobe-chat改造的单纯web版本，支持了对话所有功能](https://github.com/AIDotNet/ThorChat)
 
 - [danroth27/BlazorChatApp: An Azure OpenAI powered Blazor chat app (github.com)](https://github.com/danroth27/BlazorChatApp)
 - 桌面客户端chat [AIDotNet/ChatBox](https://github.com/AIDotNet/ChatBox)
 
 
 
-**类库**
+**类库等**
 
 - [AIDotNet/Thor: Thor(雷神托尔) 是一款强大的人工智能模型管理工具，其主要目的是为了实现多种AI模型的统一管理和使用](https://github.com/AIDotNet/Thor)
 - [AIDotNet/GraphRag.Net: 参考GraphRag使用 Semantic Kernel 来实现的dotnet版本](https://github.com/AIDotNet/GraphRag.Net)
 
 - [dotnet/smartcomponents: Sample intelligent app features provided as reusable .NET components (github.com)](https://github.com/dotnet/smartcomponents)
+
+- 类型化llm输出：[microsoft/typechat.net](https://github.com/microsoft/TypeChat.net)
 
 
 
@@ -58,23 +62,24 @@
 **教程**
 
 - [语义内核简介 | Microsoft Learn](https://learn.microsoft.com/zh-cn/semantic-kernel/overview/)
-- [LangChain 框架介绍 | 🦜️🔗 Langchain](https://docs.langchain.com.cn/docs/introduction/)
 - ~~[一键接入大模型系列：One-Api本地安装配置实操 - 董瑞鹏](https://www.cnblogs.com/ruipeng/p/18176042)~~
 - [AntSK：打造你的本地AI知识库系列——离线运行详细教程 - 许泽宇](https://www.cnblogs.com/xuzeyu/p/18049860)
   - ~~许泽宇sk视频~~
+- ~~[Token AI 🤖 (token-ai.cn)](https://token-ai.cn/docs/ai-agent/index)~~
+  - ~~他还制作了视频~~
+- ~~[Semantic Kernel & Kernel Memory 入门系列 ❤️‍🔥 - 宵伯特 - 博客园 (cnblogs.com)](https://www.cnblogs.com/xbotter/p/semantic_kernel_introduction.html)~~
 - ~~[semantic-kernel/dotnet/notebooks/README.md at main · microsoft/semantic-kernel](https://github.com/microsoft/semantic-kernel/blob/main/dotnet/notebooks/README.md)~~
-- [Token AI 🤖 (token-ai.cn)](https://token-ai.cn/docs/ai-agent/index)
-  - 他还制作了视频
-- [LazyGraphRAG：设定质量和成本的新标准 - 微软研究院 --- LazyGraphRAG: Setting a new standard for quality and cost - Microsoft Research](https://www.microsoft.com/en-us/research/blog/lazygraphrag-setting-a-new-standard-for-quality-and-cost/)
-- [Semantic Kernel & Kernel Memory 入门系列 ❤️‍🔥 - 宵伯特 - 博客园 (cnblogs.com)](https://www.cnblogs.com/xbotter/p/semantic_kernel_introduction.html)
-- [Kernel Memory 入门系列： RAG 简介 - 宵伯特 - 博客园 (cnblogs.com)](https://www.cnblogs.com/xbotter/p/kernel_memory_rag.html)
-- [Arron - RAG - 知乎](https://www.zhihu.com/column/c_1728347655808483328)
-  - https://github.com/ArronAI007/Awesome-AGI
+- ~~[SemanticKernelCookBook/docs/cn/00.IntroduceLLM.md at main · kinfey/SemanticKernelCookBook (github.com)](https://github.com/kinfey/SemanticKernelCookBook/blob/main/docs/cn/00.IntroduceLLM.md)~~
 - [这可能是目前最全的中文Semantic Kernel入门教程，呕心沥血，万字长文！！-CSDN博客](https://blog.csdn.net/sd7o95o/article/details/135984882)
 - [Beginner's Guide to Semantic Kernel with Dapper, PostgreSQL (davek.dev)](https://davek.dev/beginners-guide-to-semantic-kernel-with-dapper-postgresql-and-pgvector-in-c)
 - [Demo – API Manifest Plugins for Semantic Kernel – El Bruno](https://elbruno.com/2024/05/08/demo-api-manifest-plugins-for-semantic-kernel/)
-- [SemanticKernelCookBook/docs/cn/00.IntroduceLLM.md at main · kinfey/SemanticKernelCookBook (github.com)](https://github.com/kinfey/SemanticKernelCookBook/blob/main/docs/cn/00.IntroduceLLM.md)
 - [MASA Framework (masastack.com)](https://docs.masastack.com/framework/concepts/overview#mecha)
+
+- py
+  - [LangChain 框架介绍 | 🦜️🔗 Langchain](https://docs.langchain.com.cn/docs/introduction/)
+  - [LazyGraphRAG：设定质量和成本的新标准 - 微软研究院 --- LazyGraphRAG: Setting a new standard for quality and cost - Microsoft Research](https://www.microsoft.com/en-us/research/blog/lazygraphrag-setting-a-new-standard-for-quality-and-cost/)
+  - [Arron - RAG - 知乎](https://www.zhihu.com/column/c_1728347655808483328)
+    - https://github.com/ArronAI007/Awesome-AGI
 
 
 
