GettingStart 官方案例9 openapi接口插件支持

--- a/notes/记录.md
+++ b/notes/记录.md
@@ -73,6 +73,8 @@
 - [这可能是目前最全的中文Semantic Kernel入门教程，呕心沥血，万字长文！！-CSDN博客](https://blog.csdn.net/sd7o95o/article/details/135984882)
 - [Beginner's Guide to Semantic Kernel with Dapper, PostgreSQL (davek.dev)](https://davek.dev/beginners-guide-to-semantic-kernel-with-dapper-postgresql-and-pgvector-in-c)
 - [Demo – API Manifest Plugins for Semantic Kernel – El Bruno](https://elbruno.com/2024/05/08/demo-api-manifest-plugins-for-semantic-kernel/)
+- [手把手教你构建Agentic RAG：一种基于多文档RAG应用的AI Agent智能体 - 文章 - 开发者社区 - 火山引擎](https://developer.volcengine.com/articles/7373874019113631754)
+
 - [MASA Framework (masastack.com)](https://docs.masastack.com/framework/concepts/overview#mecha)
 
 - py
