--- a/notes/01.md
+++ b/notes/01.md
@@ -1135,6 +1135,788 @@ private const string RecallFunctionDefinition =
 
 
 
+## official
+
+### 1.基本Kernel使用和概念
+
+> - 开始学习语义内核，并了解关键概念。
+
+#### 1.1 基本提示对话
+
+- **简单提示调用**：可以通过`InvokePromptAsync`方法直接向内核发送文本提示，并获取其响应。例如，询问“天空是什么颜色的？”。
+- **模板化提示**：允许你定义参数化的提示模板，并在调用时传入具体参数值。比如，通过设置`"topic"`为“海洋”，然后调用`InvokePromptAsync`来询问“海洋是什么颜色的？”。
+- **流式输出**：对于需要长时间处理或逐步返回结果的任务，可以使用`InvokePromptStreamingAsync`方法来接收部分完成的结果更新。
+- **执行设置自定义**：可以在调用提示时指定额外的执行参数，如最大返回字符数(`MaxTokens`)、生成文本的随机性程度(`Temperature`)等，以控制AI生成内容的行为。
+- **格式化响应**：还可以通过配置执行设置中的`ResponseFormat`属性，要求内核以特定格式（如JSON对象）返回结果，这在需要结构化数据输出时非常有用。
+
+```cs
+/// <summary>
+/// 展示如何创建 <see cref="Kernel"/> 并使用它来执行提示。
+/// </summary>
+public async Task CreateKernelAsync()
+{
+    // 使用 OpenAI 聊天补全创建一个内核
+    var kernel = ConfigExtensions.GetKernel("DouBao");
+
+    // 示例 1. 使用提示调用内核并显示结果
+    Console.WriteLine(await kernel.InvokePromptAsync("天空是什么颜色的？"));
+    Console.WriteLine();
+
+    // 示例 2. 使用模板化提示调用内核并显示结果
+    KernelArguments arguments = new() { { "topic", "海洋" } };
+    Console.WriteLine(await kernel.InvokePromptAsync("{{$topic}} 是什么颜色的？", arguments));
+    Console.WriteLine();
+
+    // 示例 3. 使用模板化提示调用内核并将结果流式传输到显示
+    await foreach (
+        var update in kernel.InvokePromptStreamingAsync("{{$topic}} 是什么颜色的？请提供详细解释。", arguments)
+    )
+    {
+        Console.Write(update);
+    }
+
+    Console.WriteLine(string.Empty);
+
+    // 示例 4. 使用模板化提示和执行设置调用内核
+    arguments = new(new OpenAIPromptExecutionSettings { MaxTokens = 500, Temperature = 0.5 })
+    {
+        { "topic", "狗" },
+    };
+    Console.WriteLine(await kernel.InvokePromptAsync("给我讲一个关于 {{$topic}} 的故事", arguments));
+
+    // 示例 5. 使用模板化提示和配置为返回 JSON 的执行设置调用内核
+    arguments = new(new OpenAIPromptExecutionSettings { ResponseFormat = "json_object" })
+    {
+        { "topic", "巧克力" },
+    };
+    Console.WriteLine(
+        await kernel.InvokePromptAsync("以 JSON 格式创建一个 {{$topic}} 蛋糕的食谱", arguments)
+    );
+}
+```
+
+
+
+#### 1.2 使用KernelPlugin
+
+- 插件支持枚举，见案例4
+
+```cs
+
+/// <summary>
+/// 展示了加载<see cref="KernelPlugin"/>实例的不同方法。
+/// </summary>
+public async Task AddPluginsAsync()
+{
+    // Create a kernel with OpenAI chat completion
+    IKernelBuilder kernelBuilder = Kernel.CreateBuilder();
+    kernelBuilder.AddOpenAIChat(
+        ConfigExtensions
+        .LoadConfigFromJson("./tmpsecrets.json")
+        .GetSection("DouBao")
+        .Get<OpenAIConfig>()
+    );
+
+    kernelBuilder.Plugins.AddFromType<TimeInformation>();
+    kernelBuilder.Plugins.AddFromType<WidgetFactory>();
+    Kernel kernel = kernelBuilder.Build();
+
+    // 示例1。使用提示调用内核，询问AI无法提供的信息，并可能产生幻觉
+    Console.WriteLine(await kernel.InvokePromptAsync("现在距离圣诞节已经过去了多少天？"));
+
+    // 示例2。使用模板化提示调用内核，该提示调用插件并显示结果
+    Console.WriteLine(
+        await kernel.InvokePromptAsync(
+            "当前时间是 {{TimeInformation.GetCurrentUtcTime}} 。现在距离圣诞节已经过去了多少天？"
+        )
+    );
+
+    // 示例3。使用提示调用内核，并允许AI自动调用函数
+    OpenAIPromptExecutionSettings settings =
+        new() { FunctionChoiceBehavior = FunctionChoiceBehavior.Auto(), };
+    Console.WriteLine(
+        await kernel.InvokePromptAsync("今天距离圣诞节已经过去了多少天？ 解释你的想法。", new(settings))
+    );
+
+    // 示例4。使用提示调用内核，并允许AI自动调用使用枚举的函数
+    // Useful 随机颜色
+    Console.WriteLine(
+        await kernel.InvokePromptAsync(
+            "Create a handy lime colored widget for me.",
+            new(settings)
+        )
+    );
+    // Decorative 随机颜色
+    Console.WriteLine(
+        await kernel.InvokePromptAsync(
+            "Create a beautiful scarlet colored widget for me.",
+            new(settings)
+        )
+    );
+    // Decorative 两种颜色
+    Console.WriteLine(
+        await kernel.InvokePromptAsync(
+            "Create an attractive maroon and navy colored widget for me.",
+            new(settings)
+        )
+    );
+}
+
+/// <summary>
+/// 一个返回当前时间的插件。
+/// </summary>
+private class TimeInformation
+{
+    [KernelFunction]
+    [Description("获取今天现在的UTC时间")]
+    public string GetCurrentUtcTime() => DateTime.UtcNow.ToString("yyyy-MM-dd HH:mm:ss");
+}
+
+/// <summary>
+/// 一个创建小部件的插件。
+/// </summary>
+private class WidgetFactory
+{
+    [KernelFunction]
+    [Description("Creates a new widget of the specified type and colors")]
+    public WidgetDetails CreateWidget(
+        [Description("The type of widget to be created")] WidgetType widgetType,
+        [Description("The colors of the widget to be created")] WidgetColor[] widgetColors
+    )
+    {
+        var colors = string.Join('-', widgetColors.Select(c => c.GetDisplayName()).ToArray());
+        return new()
+        {
+            SerialNumber = $"{widgetType}-{colors}-{Guid.NewGuid()}",
+            Type = widgetType,
+            Colors = widgetColors,
+        };
+    }
+}
+
+/// <summary>
+/// <see cref="JsonConverter"/> 用于转换枚举类型
+/// </summary>
+[JsonConverter(typeof(JsonStringEnumConverter))]
+public enum WidgetType
+{
+    [Description("A widget that is useful.")]
+    Useful,
+
+    [Description("A widget that is decorative.")]
+    Decorative,
+}
+
+/// <summary>
+/// <see cref="JsonConverter"/> 用于转换枚举类型
+/// </summary>
+[JsonConverter(typeof(JsonStringEnumConverter))]
+public enum WidgetColor
+{
+    [Description("Use when creating a red item.")]
+    Red,
+
+    [Description("Use when creating a green item.")]
+    Green,
+
+    [Description("Use when creating a blue item.")]
+    Blue,
+}
+
+public class WidgetDetails
+{
+    public string SerialNumber { get; init; }
+    public WidgetType Type { get; init; }
+    public WidgetColor[] Colors { get; init; }
+}
+```
+
+
+
+#### 1.3 使用过滤器
+
+**提示词过滤器**
+
+- 过滤密码等敏感数据
+
+```cs
+/// <summary>
+/// 展示如何使用提示过滤器来确保提示以负责任的方式呈现。
+/// </summary>
+public async Task AddPromptFilterAsync()
+{
+    // 使用 OpenAI 的聊天完成功能创建内核
+    var configRoot = ConfigExtensions.LoadConfigFromJson();
+    var chatConfig = configRoot.GetSection("DouBao").Get<OpenAIConfig>();
+    var builder = Kernel
+        .CreateBuilder()
+        .AddOpenAIChatCompletion(
+        modelId: chatConfig.ModelId,
+        apiKey: chatConfig.ApiKey,
+        endpoint: chatConfig.Endpoint
+    );
+
+    // 向内核添加提示过滤器
+    builder.Services.AddSingleton<IPromptRenderFilter, PromptFilter>();
+
+    var kernel = builder.Build();
+
+    KernelArguments arguments = new() { { "card_number", "4444 3333 2222 1111" } };
+
+    var result = await kernel.InvokePromptAsync(
+        "请告诉我关于这个信用卡号 {{$card_number}} 的一些有用信息？",
+        arguments
+    );
+
+    Console.WriteLine(result);
+
+    // 输出：对不起，但我无法提供帮助。
+}
+}
+
+internal sealed class PromptFilter : IPromptRenderFilter
+{
+    /// <summary>
+    /// 在提示渲染之前异步调用的方法。
+    /// </summary>
+    /// <param name="context">包含提示渲染细节的 <see cref="PromptRenderContext"/> 实例。</param>
+    /// <param name="next">指向管道中下一个过滤器或提示渲染操作本身的委托。如果不调用它，则不会调用下一个过滤器或提示渲染。</param>
+    public async Task OnPromptRenderAsync(
+        PromptRenderContext context,
+        Func<PromptRenderContext, Task> next
+    )
+    {
+        if (context.Arguments.ContainsName("card_number"))
+        {
+            context.Arguments["card_number"] = "**** **** **** ****";
+        }
+        await next(context);
+        context.RenderedPrompt += " NO SEXISM, RACISM OR OTHER BIAS/BIGOTRY";
+        System.Console.WriteLine(context.RenderedPrompt);
+    }
+}
+```
+
+
+
+**函数过滤器**
+
+- 类似于方法aop，在调用function的前后执行处理
+
+```cs
+public async Task ObservabilityWithFiltersAsync()
+{
+    // 使用 OpenAI 的聊天完成功能创建内核
+    var configRoot = ConfigExtensions.LoadConfigFromJson();
+    var chatConfig = configRoot.GetSection("DouBao").Get<OpenAIConfig>();
+    var builder = Kernel
+        .CreateBuilder()
+        .AddOpenAIChatCompletion(
+        modelId: chatConfig.ModelId,
+        apiKey: chatConfig.ApiKey,
+        endpoint: chatConfig.Endpoint
+    );
+    builder.Plugins.AddFromType<TimeInformation>();
+    // 使用依赖注入添加过滤器
+    builder.Services.AddSingleton<IFunctionInvocationFilter, MyFunctionFilter>();
+
+    Kernel kernel = builder.Build();
+
+    // 不使用依赖注入添加过滤器
+    kernel.PromptRenderFilters.Add(new MyPromptFilter());
+
+    // 使用提示调用内核，并允许AI自动调用函数
+    OpenAIPromptExecutionSettings settings = new()
+    {
+        FunctionChoiceBehavior = FunctionChoiceBehavior.Auto(),
+    };
+    Console.WriteLine(
+        await kernel.InvokePromptAsync(
+            "距离圣诞节还有多少天？请简单解释你的思考过程。",
+            new(settings)
+        )
+    );
+}
+
+/// <summary>
+/// 返回当前时间的插件。
+/// </summary>
+private sealed class TimeInformation
+{
+    [KernelFunction]
+    [Description("获取当前UTC时间。")]
+    public string GetCurrentUtcTime() => DateTime.UtcNow.ToString("yyyy-MM-dd HH:mm:ss");
+}
+
+/// <summary>
+/// 用于可观测性的函数调用过滤器。
+/// </summary>
+private sealed class MyFunctionFilter : IFunctionInvocationFilter
+{
+    public async Task OnFunctionInvocationAsync(
+        FunctionInvocationContext context,
+        Func<FunctionInvocationContext, Task> next
+    )
+    {
+        System.Console.WriteLine($"Invoking {context.Function.Name}");
+        await next(context);
+
+        var metadata = context.Result.Metadata;
+        if (metadata is not null && metadata.ContainsKey("Usage"))
+        {
+            System.Console.WriteLine($"Token usage: {metadata["Usage"]?.AsJson()}");
+        }
+    }
+}
+
+/// <summary>
+/// 用于可观测性的提示过滤器。
+/// </summary>
+private sealed class MyPromptFilter : IPromptRenderFilter
+{
+    public async Task OnPromptRenderAsync(
+        PromptRenderContext context,
+        Func<PromptRenderContext, Task> next
+    )
+    {
+        System.Console.WriteLine($"Rendering prompt for {context.Function.Name}");
+        await next(context);
+        System.Console.WriteLine($"Rendered prompt: {context.RenderedPrompt}");
+    }
+}
+```
+
+
+
+#### 1.4 管道
+
+- 构建一个管道函数，整合一系列的function依次执行
+
+```cs
+/// <summary>
+/// 提供了一个示例，演示如何将多个函数组合成一个单一的函数，
+/// 该函数按顺序调用它们，将一个函数的输出作为下一个函数的输入传递。
+/// </summary>
+public async Task CreateFunctionPipelineAsync()
+{
+    var configRoot = ConfigExtensions.LoadConfigFromJson();
+    var chatConfig = configRoot.GetSection("DouBao").Get<OpenAIConfig>();
+    var builder = Kernel
+        .CreateBuilder()
+        .AddOpenAIChatCompletion(
+        modelId: chatConfig.ModelId,
+        apiKey: chatConfig.ApiKey,
+        endpoint: chatConfig.Endpoint
+    );
+    builder.Services.AddLogging(c => c.AddConsole().SetMinimumLevel(LogLevel.Trace));
+    Kernel kernel = builder.Build();
+
+    Console.WriteLine("================ PIPELINE ================");
+    {
+        // 创建一个函数管道，它会解析字符串为双精度浮点数，乘以另一个双精度浮点数，截断结果到整数，然后将其转换为人类可读的格式。
+        KernelFunction parseDouble = KernelFunctionFactory.CreateFromMethod(
+            (string s) => double.Parse(s, CultureInfo.InvariantCulture),
+            "parseDouble"
+        );
+        KernelFunction multiplyByN = KernelFunctionFactory.CreateFromMethod(
+            (double i, double n) => i * n,
+            "multiplyByN"
+        );
+        KernelFunction truncate = KernelFunctionFactory.CreateFromMethod(
+            (double d) => (int)d,
+            "truncate"
+        );
+        KernelFunction humanize = KernelFunctionFactory.CreateFromPrompt(
+            new PromptTemplateConfig()
+            {
+                Template = "Spell out this number in English: {{$number}}",
+                InputVariables = [new() { Name = "number" }],
+            }
+        );
+        KernelFunction pipeline = KernelFunctionCombinators.Pipe(
+            [parseDouble, multiplyByN, truncate, humanize],
+            "pipeline"
+        );
+
+        KernelArguments args = new() { ["s"] = "123.456", ["n"] = (double)78.90 };
+
+        // - parseDouble 函数将被调用，从参数中读取 "123.456" 并解析为 (double)123.456。
+        // - multiplyByN 函数将被调用，使用 i=123.456 和 n=78.90，并返回 (double)9740.6784。
+        // - truncate 函数将被调用，使用 d=9740.6784，并返回 (int)9740，这将是最终结果。
+        Console.WriteLine(await pipeline.InvokeAsync(kernel, args));
+    }
+
+    Console.WriteLine("================ GRAPH ================");
+    {
+        KernelFunction rand = KernelFunctionFactory.CreateFromMethod(
+            () => Random.Shared.Next(),
+            "GetRandomInt32"
+        );
+        KernelFunction mult = KernelFunctionFactory.CreateFromMethod(
+            (int i, int j) => i * j,
+            "Multiply"
+        );
+        KernelFunction graph = KernelFunctionCombinators.Pipe(
+            [(rand, "i"), (rand, "j"), (mult, "")],
+            "graph"
+        );
+        Console.WriteLine(await graph.InvokeAsync(kernel));
+    }
+}
+```
+
+
+
+**KernelFunctionCombinators**
+
+- 现在只能自己写这里的逻辑，SK中已删除。
+
+```cs
+/// <summary>
+/// 函数管道编排器
+/// </summary>
+public static class KernelFunctionCombinators
+{
+    /// <summary>
+    /// 调用一个函数管道，按顺序运行每个函数，并将一个函数的输出作为下一个函数的第一个参数传递。
+    /// </summary>
+    /// <param name="functions">要调用的函数管道。</param>
+    /// <param name="kernel">用于操作的内核。</param>
+    /// <param name="arguments">参数。</param>
+    /// <param name="cancellationToken">用于监视取消请求的取消令牌。</param>
+    /// <returns>KernelFunction 运行结果</returns>
+    public static Task<FunctionResult> InvokePipelineAsync(
+        IEnumerable<KernelFunction> functions,
+        Kernel kernel,
+        KernelArguments arguments,
+        CancellationToken cancellationToken
+    ) => Pipe(functions).InvokeAsync(kernel, arguments, cancellationToken);
+
+    /// <summary>
+    /// 调用一个函数管道，按顺序运行每个函数，并将一个函数的输出作为命名参数传递给下一个函数。
+    /// </summary>
+    /// <param name="functions">要调用的函数序列，以及分配给函数调用结果的参数名称。</param>
+    /// <param name="kernel">用于操作的内核。</param>
+    /// <param name="arguments">参数。</param>
+    /// <param name="cancellationToken">用于监视取消请求的取消令牌。</param>
+    /// <returns>KernelFunction 运行结果</returns>
+    public static Task<FunctionResult> InvokePipelineAsync(
+        IEnumerable<(KernelFunction Function, string OutputVariable)> functions,
+        Kernel kernel,
+        KernelArguments arguments,
+        CancellationToken cancellationToken
+    ) => Pipe(functions).InvokeAsync(kernel, arguments, cancellationToken);
+
+    /// <summary>
+    /// 创建一个函数，其调用将依次调用每个提供的函数。
+    /// </summary>
+    /// <param name="functions">要调用的函数管道。</param>
+    /// <param name="functionName">组合操作的名称。</param>
+    /// <param name="description">组合操作的描述。</param>
+    /// <returns>最后一个函数的结果。</returns>
+    /// <remarks>
+    /// 一个函数的结果将作为下一个函数的第一个参数传递。
+    /// </remarks>
+    public static KernelFunction Pipe(
+        IEnumerable<KernelFunction> functions,
+        string? functionName = null,
+        string? description = null
+    )
+    {
+        ArgumentNullException.ThrowIfNull(functions);
+        KernelFunction[] funcs = functions.ToArray();
+        Array.ForEach(funcs, f => ArgumentNullException.ThrowIfNull(f));
+
+        // 创建一个包含函数和输出变量名的元组数组。如果不是最后一个函数，获取下一个函数的第一个参数名
+        var funcsAndVars = new (KernelFunction Function, string OutputVariable)[funcs.Length];
+        for (int i = 0; i < funcs.Length; i++)
+        {
+            string p = "";
+            if (i < funcs.Length - 1)
+            {
+                var parameters = funcs[i + 1].Metadata.Parameters;
+                if (parameters.Count > 0)
+                {
+                    p = parameters[0].Name;
+                }
+            }
+            // 将当前函数和下一个函数的第一个参数名存入元组数组
+            funcsAndVars[i] = (funcs[i], p);
+        }
+        return Pipe(funcsAndVars, functionName, description);
+    }
+
+    /// <summary>
+    /// 创建一个函数，其调用将依次调用每个提供的函数。
+    /// </summary>
+    /// <param name="functions">要调用的函数管道，以及分配给函数调用结果的参数名称。</param>
+    /// <param name="functionName">组合操作的名称。</param>
+    /// <param name="description">组合操作的描述。</param>
+    /// <returns>最后一个函数的结果。</returns>
+    /// <remarks>
+    /// 一个函数的结果将作为下一个函数的第一个参数传递。
+    /// </remarks>
+    public static KernelFunction Pipe(
+        IEnumerable<(KernelFunction Function, string OutputVariable)> functions,
+        string? functionName = null,
+        string? description = null
+    )
+    {
+        ArgumentNullException.ThrowIfNull(functions);
+
+        (KernelFunction Function, string OutputVariable)[] arr = functions.ToArray();
+        Array.ForEach(
+            arr,
+            f =>
+            {
+                ArgumentNullException.ThrowIfNull(f.Function);
+                ArgumentNullException.ThrowIfNull(f.OutputVariable);
+            }
+        );
+        // 使用 KernelFunctionFactory 创建一个新的 KernelFunction
+        return KernelFunctionFactory.CreateFromMethod(
+            async (Kernel kernel, KernelArguments arguments) =>
+            {
+                FunctionResult? result = null;
+                // 遍历函数数组，依次调用每个函数。如果不是最后一个函数，将当前函数的结果存入参数集合中，作为下一个函数的输入
+                for (int i = 0; i < arr.Length; i++)
+                {
+                    result = await arr[i]
+                        .Function.InvokeAsync(kernel, arguments)
+                        .ConfigureAwait(false);
+                    if (i < arr.Length - 1)
+                    {
+                        arguments[arr[i].OutputVariable] = result.GetValue<object>();
+                    }
+                }
+
+                return result;
+            },
+            functionName,
+            description
+        );
+    }
+}
+```
+
+
+
+#### 1.5 OpenAPI导入
+
+- 首先安装Microsoft.SemanticKernel.Plugins.OpenApi
+- 然后加载openapi格式的接口json文件，此后sk将创建出对应接口的function。
+
+```cs
+/// <summary>
+/// 基本使用
+/// </summary>
+public async Task AddOpenAPIPluginsAsync()
+{
+    var kernel = ConfigExtensions.GetKernel("DouBao");
+
+    // 加载 OpenAPI 插件
+    var plugin = await kernel.ImportPluginFromOpenApiAsync(
+        "RepairService",
+        "./Resources/repair-service.json"
+    );
+    PromptExecutionSettings settings = new()
+    {
+        FunctionChoiceBehavior = FunctionChoiceBehavior.Auto(),
+    };
+    Console.WriteLine(
+        await kernel.InvokePromptAsync("List all of the repairs .", new(settings))
+    );
+}
+
+/// <summary>
+/// 展示了如何转换一个 Open API <see cref="KernelPlugin"/> 实例以支持依赖注入。
+/// </summary>
+public async Task TransformOpenAPIPluginsAsync()
+{
+    // 创建一个带有 OpenAI 聊天完成功能的内核
+    var serviceProvider = BuildServiceProvider();
+    var kernel = serviceProvider.GetRequiredService<Kernel>();
+
+    // 加载 OpenAPI 插件
+    var plugin = await kernel.CreatePluginFromOpenApiAsync(
+        "RepairService",
+        "./Resources/repair-service.json"
+    );
+
+    // 转换插件以使用 IMechanicService 通过依赖注入
+    kernel.Plugins.Add(TransformPlugin(plugin));
+
+    PromptExecutionSettings settings = new()
+    {
+        FunctionChoiceBehavior = FunctionChoiceBehavior.Auto(),
+    };
+
+    // 预约一次更换旧发动机油并替换为新机油的服务.
+    Console.WriteLine(
+        await kernel.InvokePromptAsync(
+            "Book an appointment to drain the old engine oil and replace it with fresh oil.",
+            new(settings)
+        )
+    );
+}
+
+/// <summary>
+/// 构建一个可以用来解析服务的 ServiceProvider。
+/// </summary>
+private ServiceProvider BuildServiceProvider()
+{
+    ServiceCollection collection = [];
+    collection.AddSingleton<IMechanicService>(new FakeMechanicService());
+    var chatConfig = ConfigExtensions.GetConfig<OpenAIConfig>("./tmpsecrets.json", "DouBao");
+    collection
+        .AddKernel()
+        .AddOpenAIChatCompletion(
+        modelId: chatConfig.ModelId,
+        apiKey: chatConfig.ApiKey,
+        endpoint: chatConfig.Endpoint
+    );
+    return collection.BuildServiceProvider();
+}
+
+/// <summary>
+/// 修改 KernelPlugin 实例中特定函数的行为，而不改变其他函数。此处改变 createRepair 函数的行为。
+/// </summary>
+public static KernelPlugin TransformPlugin(KernelPlugin plugin)
+{
+    List<KernelFunction>? functions = [];
+    foreach (var function in plugin)
+    {
+        if (function.Name == "createRepair")
+        {
+            functions.Add(CreateRepairFunction(function));
+        }
+        else
+        {
+            functions.Add(function);
+        }
+    }
+    return KernelPluginFactory.CreateFromFunctions(plugin.Name, plugin.Description, functions);
+}
+
+/// <summary>
+/// 创建一个用于 createRepair 操作的 <see cref="KernelFunction"/> 实例，该实例只接收
+/// title 和 description 参数，并且有一个委托使用 IMechanicService 来获取 assignedTo。
+/// 相当于和原先引入openapi中的createRepair减少了几个参数
+/// </summary>
+public static KernelFunction CreateRepairFunction(KernelFunction function) =>
+    KernelFunctionFactory.CreateFromMethod(
+    (
+        Kernel kernel,
+        KernelFunction currentFunction,
+        KernelArguments arguments,
+        [FromKernelServices] IMechanicService mechanicService,
+        CancellationToken cancellationToken
+    ) =>
+    {
+        arguments.Add("assignedTo", mechanicService.GetMechanic());
+        arguments.Add("date", DateTime.UtcNow.ToString("R"));
+
+        return function.InvokeAsync(kernel, arguments, cancellationToken);
+    },
+    new KernelFunctionFromMethodOptions()
+    {
+        FunctionName = function.Name,
+        Description = function.Description,
+        Parameters = function
+            .Metadata.Parameters.Where(e => e.Name == "title" || e.Name == "description")
+            .ToList(),
+        ReturnParameter = function.Metadata.ReturnParameter,
+    }
+);
+
+/// <summary>
+/// 获取分配给下一个工作的技工的服务接口。
+/// </summary>
+public interface IMechanicService
+{
+    /// <summary>
+    /// 返回分配给下一个工作的技工的名字。
+    /// </summary>
+    string GetMechanic();
+}
+
+/// <summary>
+/// <see cref="IMechanicService"/> 的模拟实现。
+/// </summary>
+public class FakeMechanicService : IMechanicService
+{
+    public string GetMechanic() => "Bob";
+}
+```
+
+
+
+### 2.智能体
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
