Processes 官方案例1 基本使用

--- a/notes/01.md
+++ b/notes/01.md
@@ -1882,6 +1882,11 @@ public class FakeMechanicService : IMechanicService
 
 #### 2.1 基本使用
 
+- 涉及库
+  - [Microsoft.SemanticKernel.Agents.Abstractions](https://www.nuget.org/packages/Microsoft.SemanticKernel.Agents.Abstractions)
+  - [Microsoft.SemanticKernel.Agents.Core](https://www.nuget.org/packages/Microsoft.SemanticKernel.Agents.Core)
+  - [Microsoft.SemanticKernel.Agents.OpenAI](https://www.nuget.org/packages/Microsoft.SemanticKernel.Agents.OpenAI)
+
 - **ChatCompletionAgent** 是语义内核框架中的一个核心类，用于创建和管理 AI 代理。通过该类，可以定义代理的名称、指令以及使用的内核等属性。
 - 除了手动定义代理的指令和名称外，还可以通过 YAML 模板文件来配置代理。这种方式适合需要动态生成代理指令的场景。
 
@@ -3215,21 +3220,33 @@ public class Step11_AssistantTool_FileSearch(ITestOutputHelper output) : BaseAge
 
 
 
+### 3.Processes
+
+- 流程是一系列结构化的活动或任务，可交付服务或产品，并与客户的特定业务目标保持一致。
 
 
+- Process Framework 提供了一个可靠的解决方案，用于自动执行复杂的工作流。 框架中的每个步骤通过调用用户定义的内核函数来执行任务，并利用事件驱动模型来管理工作流执行。
 
+- 通过将 AI 嵌入业务流程，可以显著提高工作效率和决策能力。 借助 Process Framework，你可以从无缝 AI 集成中受益，从而促进更智能、响应更快速的工作流。 此框架简化了运营，促进了业务部门之间的协作，提高了整体效率。
 
+**特点**
 
+- **利用 Semantic Kernel：**步骤可以利用一个或多个内核函数，使您能够在流程中利用语义内核的所有方面。
+- **可重用性和灵活性：**步骤和流程可以在不同的应用程序中重复使用，从而促进模块化和可扩展性。
+- **事件驱动型架构：**利用事件和元数据有效地触发操作和流程步骤之间的转换。
+- **完全控制和可审计性：**以定义和可重复的方式保持对流程的控制，并通过 Open Telemetry 完成审计功能。
 
+**概念**
 
+- **过程：**为实现客户的特定业务目标而安排的步骤集合。
+- **步骤：**流程中具有定义输入和输出的活动，有助于实现更大的目标。
+- **模式：**特定的序列类型，指示如何执行步骤以完全完成流程。
 
+**使用场景**
 
-
-
-
-
-
-
+- **开户：**此过程包括多个步骤，例如信用提取和评级、欺诈检测、在核心系统中创建客户账户以及向客户发送欢迎信息，包括他们的客户 ID。
+- **送餐：**订购外卖是一个熟悉的过程。从通过电话、网站或应用程序接收订单，到准备每道食品，确保质量控制、司机分配和最终交付，这个过程中的许多步骤都可以简化。
+- **支持票证：**我们都提交了支持票证 — 无论是针对新服务、IT 支持还是其他需求。此流程可能涉及基于业务和客户需求的多个子流程，最终通过有效满足客户需求来实现满意度。
 
 
 
