Processes 官方案例1 将多个步骤构建流程，含循环结构，通过事件消息判断逻辑

--- a/notes/01.md
+++ b/notes/01.md
@@ -3250,7 +3250,20 @@ public class Step11_AssistantTool_FileSearch(ITestOutputHelper output) : BaseAge
 
 
 
-
+```mermaid
+flowchart LR
+    Start["Start"]
+    End["End"]
+    IntroStep["IntroStep"]
+    IntroStep["IntroStep"] --> ChatUserInputStep["ChatUserInputStep"]
+    ChatUserInputStep["ChatUserInputStep"]
+    ChatUserInputStep["ChatUserInputStep"] --> End["End"]
+    ChatUserInputStep["ChatUserInputStep"] --> ChatBotResponseStep["ChatBotResponseStep"]
+    ChatBotResponseStep["ChatBotResponseStep"]
+    ChatBotResponseStep["ChatBotResponseStep"] --> ChatUserInputStep["ChatUserInputStep"]
+    Start --> IntroStep["IntroStep"]
+    ChatBotResponseStep["ChatBotResponseStep"] --> End
+```
 
 
 
